client deploy herokuapp

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,11 +8,11 @@
   <link rel="icon" href="%PUBLIC_URL%/logo/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#ffffff" />
-  <meta name="description" content="Pizza Delivery App." />
+  <meta name="description" content="Food Delivery App." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Pizza Delivery App</title>
+  <title>FoodHub</title>
 
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
